# RetardCalc

./: Cargo.toml  README.md  example.msl  morsel
doc/: BYTECODE.md  SYNTAX.md
examples/: bench.msl  calculator.msl  cast.msl  circle.msl  functions.msl  login.msl  quickstart.msl  test.msl  test2.msl  test_gc.msl  variables.msl
src/: main.rs  tests.rs
src/cli/: app_state.rs  backend.rs  calc_errors.rs  cli_main.rs  cmd.rs  mod.rs
src/core/: mod.rs
src/core/compiler/: mod.rs  source.rs
src/core/shared/: builtin_func.rs  bytecode.rs  executable.rs  mod.rs  types.rs
src/core/tools/: mod.rs  packer.rs
src/core/vm/: debug.rs  error.rs  generics.rs  memory.rs  mod.rs  number.rs  operators.rs
src/interpreter/: evaluator.rs  lexer.rs  mod.rs  operators.rs  tokens.rs
src/interpreter/ast/: mod.rs  node.rs  parser.rs
src/interpreter/tokenizer/: lexer.rs  mod.rs  token.rs
src/morsel_core/: interpreter.rs
src/morsel_core/evaluating/: evaluator.rs  functions.rs
src/morsel_core/lexing/: lexer.rs  operators.rs  token.rs
src/morsel_core/parsing/: node.rs  parser.rs
src/morsel_interpreter/: mod.rs
src/morsel_interpreter/environment/: mod.rs  morsel_std.rs  types.rs  value.rs
src/morsel_interpreter/lexer/: token.rs  tokenizer.rs
src/morsel_interpreter/parser/: ast_node.rs  builder.rs  type_inference.rs
src/morsel_interpreter/runtime/: executor.rs
syntax_highlighting/Morsel.tmBundle/: info.plist
syntax_highlighting/Morsel.tmBundle/Syntaxes/: morsel.tmLanguage.json
syntax_highlighting/morsel_vsc/: language-configuration.json  package.json
(+24 files in other folders)
