[package]
name = "morsel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "morsel"
path = "src/bin/morsel.rs"

[[bin]]
name = "morsel_vm"
path = "src/bin/morsel_vm.rs"

[lib]
name = "morsel_core"
path = "src/lib.rs"

# Reduce binary size
[profile.release]
lto = "thin"
panic = "abort"
opt-level = "s"
debug = "none"
strip = "symbols"

[dependencies]
lasso = "0.7.3"
colored = "3.1.1"
